Fixed center alignment

--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -105,6 +105,7 @@ body {
 .start {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 // ============================================================================
@@ -119,6 +120,7 @@ body {
   left: 0;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .game-background {
